--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </ul>
         <p style="color:hsl(219, 92%, 54%);">交通运输部标准化台账：5万/年</p>
                 <ul>
-                    <li>1：建立安全标准化管理体系；</li>
+                    <li>建立安全标准化管理体系；</li>
                     <li>适用于上规模物流企业</li>
                     <li>企业内部需有员工配合；</li>
                     <li>以培训企业内部员工，提升安全管理能力为主；</li>
